small, multi-platform (amd64, arm64) images
Modify fproxy, rproxy and tproxy-config docker container image due to arm64 compatibility

Issue-ID: INT-1174
Issue-ID: INT-1175
Issue-ID: INT-1176
Signed-off-by: Simon Hrabos <simon.hrabos@tieto.com>
Change-Id: Ibbf9e1d15bea9ebb1b82ff50c8671927c68be2ed